--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
 			            <h1 class="mb-4 mt-3">I'm <span>Hamilton James</span></h1>
 			            <h2 class="mb-4">A senior Full-Stack developer</h2>
 		            </div>
+					<div class="text" style="text-align: center; left: 50%!important;">		
+						<img src="images/avatar.jpg" style="
+							margin: auto;
+							height: 250px;
+							width: auto;
+							border-radius: 25px;
+						"/>              
+		            </div>
 		          </div>
 	        	</div>
 	        </div>
@@ -291,6 +299,28 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
+							<h3>Solidity</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
+							    <span>95%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
+							<h3>Web3</h3>
+							<div class="progress">
+							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
+							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
+							    <span>90%</span>
+							  	</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
 							<h3>Angular/ Vue</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
@@ -417,17 +447,6 @@
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
 							    <span>85%</span>
-							  	</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>Solidity</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-							    <span>95%</span>
 							  	</div>
 							</div>
 						</div>
@@ -670,7 +689,7 @@
 							I promise you my best effort.
 							I sincerely wish you success in your future business and life.
 						</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<a href="mailto:bluenets66@gmail.com" class="btn btn-primary py-3 px-5">Hire me</a>
 					</div>
 				</div>
 			</div>
@@ -711,7 +730,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">bluenets66@gmail.com</a></p>
+	            <p><a href="mailto:bluenets66@gmail.com">bluenets66@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -720,7 +739,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Website</h3>
-	            <p><a href="#">hamilton-james.portfolio.app</a></p>
+	            <p><a href="#">Hamilton Portfolio</a></p>
 	          </div>
           </div>
         </div>
