update contact infor

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">(+1)402 512-1616</a></p>
+	            <p><a href="tel:14025121616">(+1)402 512-1616</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -795,8 +795,8 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">4808 Brew Creek Rd, Squamish, Canada</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">(+1)402 512-1616</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">bluenets66@gamil.com</span></a></li>
+	                <li><a href="tel:14025121616"><span class="icon icon-phone"></span><span class="text">(+1)402 512-1616</span></a></li>
+	                <li><a href="mailto:bluenets66@gmail.com"><span class="icon icon-envelope"></span><span class="text">bluenets66@gamil.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
