--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello! Have a Blessed Day!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Hamilton James</span></h1>
-			            <h2 class="mb-4">A senior Full-Stack developer</h2>
+			            <h2 class="mb-4">A senior Full-Stack & Blockchain developer</h2>
 		            </div>
 					<div class="text" style="text-align: center; left: 50%!important;">		
 						<img src="images/avatar.jpg" style="
